err/json-transporter.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/boto'...
Listing './lib/python3.5/site-packages/boto/awslambda'...
Listing './lib/python3.5/site-packages/boto/beanstalk'...
Listing './lib/python3.5/site-packages/boto/cacerts'...
Listing './lib/python3.5/site-packages/boto/cloudformation'...
Listing './lib/python3.5/site-packages/boto/cloudfront'...
Listing './lib/python3.5/site-packages/boto/cloudhsm'...
Listing './lib/python3.5/site-packages/boto/cloudsearch'...
Listing './lib/python3.5/site-packages/boto/cloudsearch2'...
Listing './lib/python3.5/site-packages/boto/cloudsearchdomain'...
Listing './lib/python3.5/site-packages/boto/cloudtrail'...
Listing './lib/python3.5/site-packages/boto/codedeploy'...
Listing './lib/python3.5/site-packages/boto/cognito'...
Listing './lib/python3.5/site-packages/boto/cognito/identity'...
Listing './lib/python3.5/site-packages/boto/cognito/sync'...
Listing './lib/python3.5/site-packages/boto/configservice'...
Listing './lib/python3.5/site-packages/boto/contrib'...
Listing './lib/python3.5/site-packages/boto/datapipeline'...
Listing './lib/python3.5/site-packages/boto/directconnect'...
Listing './lib/python3.5/site-packages/boto/dynamodb'...
Listing './lib/python3.5/site-packages/boto/dynamodb2'...
Listing './lib/python3.5/site-packages/boto/ec2'...
Listing './lib/python3.5/site-packages/boto/ec2/autoscale'...
Listing './lib/python3.5/site-packages/boto/ec2/cloudwatch'...
Listing './lib/python3.5/site-packages/boto/ec2/elb'...
Listing './lib/python3.5/site-packages/boto/ec2containerservice'...
Listing './lib/python3.5/site-packages/boto/ecs'...
Listing './lib/python3.5/site-packages/boto/elasticache'...
Listing './lib/python3.5/site-packages/boto/elastictranscoder'...
Listing './lib/python3.5/site-packages/boto/emr'...
Listing './lib/python3.5/site-packages/boto/file'...
Listing './lib/python3.5/site-packages/boto/fps'...
Listing './lib/python3.5/site-packages/boto/glacier'...
Listing './lib/python3.5/site-packages/boto/gs'...
Listing './lib/python3.5/site-packages/boto/iam'...
Listing './lib/python3.5/site-packages/boto/kinesis'...
Listing './lib/python3.5/site-packages/boto/kms'...
Listing './lib/python3.5/site-packages/boto/logs'...
Listing './lib/python3.5/site-packages/boto/machinelearning'...
Listing './lib/python3.5/site-packages/boto/manage'...
Listing './lib/python3.5/site-packages/boto/mashups'...
Listing './lib/python3.5/site-packages/boto/mturk'...
Listing './lib/python3.5/site-packages/boto/mws'...
Listing './lib/python3.5/site-packages/boto/opsworks'...
Listing './lib/python3.5/site-packages/boto/pyami'...
Listing './lib/python3.5/site-packages/boto/pyami/installers'...
Listing './lib/python3.5/site-packages/boto/pyami/installers/ubuntu'...
Listing './lib/python3.5/site-packages/boto/rds'...
Listing './lib/python3.5/site-packages/boto/rds2'...
Listing './lib/python3.5/site-packages/boto/redshift'...
Listing './lib/python3.5/site-packages/boto/roboto'...
Listing './lib/python3.5/site-packages/boto/route53'...
Listing './lib/python3.5/site-packages/boto/route53/domains'...
Listing './lib/python3.5/site-packages/boto/s3'...
Listing './lib/python3.5/site-packages/boto/sdb'...
Listing './lib/python3.5/site-packages/boto/sdb/db'...
Listing './lib/python3.5/site-packages/boto/sdb/db/manager'...
Listing './lib/python3.5/site-packages/boto/services'...
Listing './lib/python3.5/site-packages/boto/ses'...
Listing './lib/python3.5/site-packages/boto/sns'...
Listing './lib/python3.5/site-packages/boto/sqs'...
Listing './lib/python3.5/site-packages/boto/sts'...
Listing './lib/python3.5/site-packages/boto/support'...
Listing './lib/python3.5/site-packages/boto/swf'...
Listing './lib/python3.5/site-packages/boto/vendored'...
Listing './lib/python3.5/site-packages/boto/vendored/regions'...
Listing './lib/python3.5/site-packages/boto/vpc'...
Listing './lib/python3.5/site-packages/boto-2.48.0.dist-info'...
Listing './lib/python3.5/site-packages/bson'...
Listing './lib/python3.5/site-packages/docopt-0.6.2.egg-info'...
Listing './lib/python3.5/site-packages/elasticsearch'...
Listing './lib/python3.5/site-packages/elasticsearch/client'...
Listing './lib/python3.5/site-packages/elasticsearch/connection'...
Listing './lib/python3.5/site-packages/elasticsearch/helpers'...
Listing './lib/python3.5/site-packages/elasticsearch-6.1.1.dist-info'...
Listing './lib/python3.5/site-packages/gridfs'...
Listing './lib/python3.5/site-packages/happybase'...
Listing './lib/python3.5/site-packages/happybase-1.1.0.egg-info'...
Listing './lib/python3.5/site-packages/json_transporter-0.2.3.egg-info'...
Listing './lib/python3.5/site-packages/kazoo'...
Listing './lib/python3.5/site-packages/kazoo/handlers'...
Listing './lib/python3.5/site-packages/kazoo/protocol'...
Listing './lib/python3.5/site-packages/kazoo/recipe'...
Listing './lib/python3.5/site-packages/kazoo/testing'...
Listing './lib/python3.5/site-packages/kazoo/tests'...
Listing './lib/python3.5/site-packages/kazoo-2.4.0.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/ply'...
Listing './lib/python3.5/site-packages/ply-3.10.egg-info'...
Listing './lib/python3.5/site-packages/pykafka'...
Listing './lib/python3.5/site-packages/pykafka/cli'...
Listing './lib/python3.5/site-packages/pykafka/rdkafka'...
Listing './lib/python3.5/site-packages/pykafka/test'...
Listing './lib/python3.5/site-packages/pykafka/utils'...
Listing './lib/python3.5/site-packages/pykafka-2.7.0.egg-info'...
Listing './lib/python3.5/site-packages/pymongo'...
Listing './lib/python3.5/site-packages/pymongo-3.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/tabulate-0.8.2.egg-info'...
Listing './lib/python3.5/site-packages/tests'...
Listing './lib/python3.5/site-packages/tests/pykafka'...
Listing './lib/python3.5/site-packages/tests/pykafka/rdkafka'...
Listing './lib/python3.5/site-packages/tests/pykafka/utils'...
Compiling './lib/python3.5/site-packages/tests/tport_tests.py'...
***   File "./lib/python3.5/site-packages/tests/tport_tests.py", line 5
    print "SETUP!"
                 ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/thriftpy'...
Listing './lib/python3.5/site-packages/thriftpy/contrib'...
Listing './lib/python3.5/site-packages/thriftpy/contrib/tracking'...
Listing './lib/python3.5/site-packages/thriftpy/parser'...
Listing './lib/python3.5/site-packages/thriftpy/protocol'...
Listing './lib/python3.5/site-packages/thriftpy/transport'...
Listing './lib/python3.5/site-packages/thriftpy/transport/buffered'...
Listing './lib/python3.5/site-packages/thriftpy/transport/framed'...
Listing './lib/python3.5/site-packages/thriftpy/transport/memory'...
Listing './lib/python3.5/site-packages/thriftpy-0.3.9.egg-info'...
Listing './lib/python3.5/site-packages/transporter'...
Compiling './lib/python3.5/site-packages/transporter/tools.py'...
***   File "./lib/python3.5/site-packages/transporter/tools.py", line 55
    print json.dumps(i, indent=2)
             ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/transporter/tport.py'...
***   File "./lib/python3.5/site-packages/transporter/tport.py", line 145
    print 'You are about to DESTROY the entire {0} bucket!!!\n'.format(
                                                              ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
